# vobject-poc

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .sourcery.yaml  ACKNOWLEDGEMENTS.txt  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_2.py  tests.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pre-commit.yml  test.yml
docs/: index.html  params.json
extras/: Dockerfile  Dockerfile.lint  Dockerfile.py2  Dockerfile2.lint  pyproject.toml
programmers-guide/source/: conf.py  index.rst
scripts/: checks.sh  checks_py27.sh
test_files/: radicale-1238-0.ics  radicale-1238-1.ics  radicale-1238-2.ics  simple_2_0_test.ics
tests/: common.py  test_behaviors.py  test_calendar_serialization.py  test_change_tz.py  test_cli.py  test_compatibility.py  test_from_doctest.py  test_icalendar.py  test_utils.py  test_vcards.py  test_vobject.py  test_vobject_parsing.py  test_vtodo.py  test_win32tz.py  tests.py
tests/test_files/: more_tests.txt  utf8_test.ics
vobject/: __init__.py  base.py  behavior.py  change_tz.py  hcalendar.py  helper.py  icalendar.py  ics_diff.py  vcard.py  vobject_error.py  win32tz.py
vobject/helper/: config.py  funcs.py  imports_.py
